--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.1
   flutter_svg: ^2.2.0
+  dio: ^5.9.0
+  logger: ^2.6.1
 
 dev_dependencies:
   flutter_test:
