--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   logger: ^2.6.1
   toastification: ^3.0.3
   shared_preferences: ^2.5.3
+  web_socket_channel: ^3.0.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
